fix : 불변객체로 인한 버그 해결 SseEmitterWrapper의 chatRoomNotificationStatusList를 불변객체로 주입하여 생기는 버그 해결